# diffusion2D

./: .gitignore  README.md  diffusion2d.py  pyproject.toml  test-script.py
gilvv_diffusion2d_1/: diffusion2d.py  output.py
