[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gilvv_diffusion2d_1"
authors = [
    {name = "Vaibhav Gil", email = "st191590@stud.uni-stuttgart.de"},
]
description = "This code solves the diffusion equation in 2D over a square domain which is at a certain temperature and a circular disc at the center which is at a higher temperature. "
readme = "README.md"
requires-python = ">=3.6"
keywords = ["one", "two"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    'importlib-metadata; python_version>"3.6"',
    "matplotlib",
]
version = "0.0.1"

[project.urls]
repository = "https://github.com/MarcelWolkober/diffusion2D"